# eink-displays

esp/: .gitignore  (+1 more)
home-informations/: .gitignore  Dockerfile  explore_data.ipynb  hello.py  pyproject.toml
home-informations/api/: Dockerfile  alembic.ini  database.db  pyproject.toml  test.py
home-informations/api/app/: config.py  main.py
home-informations/api/app/api/v1/: display.py  gtfs.py  immich.py  timetable.py
home-informations/api/app/database/: database.py
home-informations/api/app/models/: immich.py
home-informations/api/app/renderer/: timetable.py
home-informations/api/app/services/: display_service.py  image_processing_service.py  immich_service.py  timetable_service.py
home-informations/api/app/utils/: helpers.py  immich_cache.py
home-informations/api/image_processing/: .gitignore  Dockerfile  pyproject.toml  setup.py  test.ipynb  test.py
home-informations/api/image_processing/src/: main.py
home-informations/api/migrations/: env.py
home-informations/api/migrations/versions/: 310e5ce04adf_create_table.py  cf969f1ba7c1_add_full_refresh_frequency.py
home-informations/apis/: Dockerfile  duckdb.ipynb  explore_data.ipynb  requirements.txt
home-informations/apis/src/: main.py  utils.py
home-informations/apis/src/gtfs/: config.py  consts.py  duckdb.ipynb  format.py  gtfs_dataset.py
home-informations/apis/src/renderer/: timetable.py
home-informations/app/: config.py  main.py
home-informations/app/api/v1/: timetable.py
home-informations/app/services/: gtfs_service.py
home-informations/app/utils/: helpers.py
home-informations/gtfs/: consts.py  dataset.py  explore_data.ipynb
home-informations/home_informations/gtfs/: config.py  explore_data.ipynb  gtfs_realtime.py
home-informations/renderer/: package-lock.json  package.json
home-informations/src/: main.py  utils.py
home-informations/src/gtfs/: config.py  consts.py  gtfs_dataset.py  gtfs_realtime.py
home-informations/src/renderer/: timetable.py
(+65 files in other folders)
